<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.electronics.invento.merosaathi.TransportMainActivity"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:gravity="center">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="50dp"
        app:cardBackgroundColor="@color/colorRed"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/closePopup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close_black_24dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:elevation="5dp"
                android:layout_alignParentEnd="true"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/unwanted_text_warning_title"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_error_outline_black_24dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"
                    android:text="@string/unwanted_text_warning_text"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorYellow"
                    android:text="@string/greet"/>

                <Button
                    android:id="@+id/btn_Ok_reset"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Ok"
                    android:textSize="22sp"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/button_red_round"
                    android:layout_gravity="center"/>
            </LinearLayout>


        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
